samples/_failures_safe/1761373443_307dcb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02007675.c: In function ‘next_token’:
./samples/SAFE/__tmp_02007675.c:145:20: error: expected ‘;’ at end of input
  145 |         token.value
      |                    ^
      |                    ;
./samples/SAFE/__tmp_02007675.c:145:9: error: expected declaration or statement at end of input
  145 |         token.value
      |         ^~~~~
./samples/SAFE/__tmp_02007675.c:145:9: error: expected declaration or statement at end of input
